data/all_generated_tests/raw_wast_tests/return_StackCorruption_2645.wast
;; 4. **Test with Control Flow Inside a Block**    - Incorporate loops or conditional branches inside a function's block that perform several stack operations.    - Check that the return unwinds correctly from both the current block and intermediate control flow blocks.    - Relates to proper stack unwinding and confirms that inner control flow does not corrupt outermost return stack state.

(assert_invalid
  (module
    (func $test-loop-conditional-return (result i32)
      (i32.const 1)
      (block (result i32)
        (loop (br_if 0 (i32.eqz (i32.const 1))))
        (if (i32.const 0) 
          (then (return (i32.const 42)))
        )
      )
    )
  )
  "type mismatch"
)